# 3ds-ftpd-transfer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/ftpd_transfer/: __init__.py  __main__.py  app.py
tests/: test_app.py
